--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,11 @@
 title:        Privacy
 url:          http://subway.map.apievangelist.com/
 version:      1.1.1
+
 author:
   name:       'Kin Lane'
   email:      'info@apievangelist.com'
-markdown:     rdiscount
-permalink:    pretty
-pygments:     true
+markdown:     kramdown
 
 permalink: /:categories/:year/:month/:day/:title
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
